2001-07-27  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump to 2.2.4.

	* sysdeps/mips/Dist: Remove non-existing files.
	* sysdeps/mips/mips64/Dist: Likewise.
	* sysdeps/mips/mipsel/Dist: Removed.
	* iconv/Makefile (distribute): Add strtab.c and iconvconfig.h.
	* sysdeps/generic/Dist: Add bits/link.h.
	* sysdeps/unix/sysv/linux/m68k/Dist: Add sys/procfs.h.
	* sysdeps/unix/sysv/aix/Dist: Add dl-support.c, dl-addr.c, and
	dl-error.c.
	* sysdeps/ia64/Dist: Add bits/link.h.

	* libio/vasprintf.c (_IO_vasprintf): Don't copy uninitialized byte
	from stream buffer to result buffer.
	Reported by Michael Meeks <michael@ximian.com>.

	* libio/Makefile: Add rules to check output of tst-fopenloc and
	for memory leaks.
	* libio/tst-fopenloc.c: New file.

	* iconv/gconv_cache.c (__gconv_compare_alias_cache): New function.
	* iconv/gconv_int.h: Add prototype for __gconv_compare_alias_cache.
	* iconv/gconv_charset.h: Replace __gconv_lookup_alias prototype with
	__gconv_compare_alias prototype.
	* iconv/gconv_db.c (__gconv_lookup_alias): Removed.
	(__gconv_compare_alias): New function.
	* locale/findlocale.c (_nl_find_locale): Use __gconv_compare_alias
	instead of calling __gconv_lookup_alias twice and compare here.

2001-07-26  Mark Kettenis  <kettenis@gnu.org>

	* hurd/hurdsig.c (_hurd_internal_post_signal): Fix handling of
	SA_RESETHAND and SA_NODEFER.

2001-07-27  Ulrich Drepper  <drepper@redhat.com>

	* libio/fileops.c (_IO_new_file_fopen): Correctly locate ccs=
	substring.  Don't handle ccs= if no descriptor was allocated.
	Normalize codeset name before calling __wcsmbs_named_conv.
	Initialize transliteration elements.  Free step data structure.
	* libio/iofclose.c (_IO_new_fclose): Correct freeing of the step data.
	* libio/iofwide.c (__libio_translit): Renamed from libio_translit
	and made public.  Various little cleanup changes.
	* wcsmbs/wcsmbsload.h (struct gconv_fcts): Add towc_nsteps and
	tomb_nsteps member.